# DHS-ReportBlitz

reportblitz/: README.md  package.json  pnpm-lock.yaml
reportblitz/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
reportblitz/src-tauri/capabilities/: default.json  main.json
reportblitz/src-tauri/src/: lib.rs  main.rs
reportblitz/src/routes/: +page.svelte
